# cpp-futile-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/macros/: GenerateSourceGroups.cmake  ListSubDirectories.cmake
include/cpp-futile-engine/: color.hpp  model.hpp  normal.hpp  object.hpp  parse_exception.hpp  ply_file.hpp  point.hpp  ray.hpp  vector3.hpp
modules/geonorm/src/: CMakeLists.txt  main.cpp
modules/raytracer/src/: CMakeLists.txt  main.cpp
modules/sample/src/: CMakeLists.txt  main.cpp
modules/sample/test/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
