set(MODULE_NAME "geonorm")
set(${MODULE_NAME}_INCLUDES "${SDL2_INCLUDE_DIR}" "${SDL2_IMAGE_INCLUDE_DIR}" "${SDL2_TTF_INCLUDE_DIR}")
set(${MODULE_NAME}_LINKED "${CMAKE_PROJECT_NAME}" "${SDL2_LIBRARY}" "${SDL2_IMAGE_LIBRARIES}" "${SDL2_TTF_LIBRARIES}")
file(GLOB_RECURSE ${MODULE_NAME}_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.c" "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/*.cxx" "${CMAKE_CURRENT_SOURCE_DIR}/*.cc" "${CMAKE_CURRENT_SOURCE_DIR}/*.c++")

add_executable(${MODULE_NAME} "${${MODULE_NAME}_SOURCES}")
target_include_directories(${MODULE_NAME} SYSTEM PUBLIC "${Boost_INCLUDE_DIRS}")
target_link_libraries(${MODULE_NAME} "${${MODULE_NAME}_LINKED}")

if(WIN32)
    add_custom_command(
        TARGET ${MODULE_NAME} POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
        "${${CMAKE_PROJECT_NAME}_IMPLICITLY_LINKED_MODULES}"
        $<TARGET_FILE_DIR:${MODULE_NAME}>
    )
endif()

install(TARGETS ${MODULE_NAME} RUNTIME DESTINATION "${PROJECT_BINARY_DIR}/bin")