set(MODULE_NAME "raytracer")
set(${MODULE_NAME}_INCLUDES "${SDL2_INCLUDE_DIR}" "${SDL2_IMAGE_INCLUDE_DIR}" "${SDL2_TTF_INCLUDE_DIR}")
set(${MODULE_NAME}_LINKED "${SDL2_LIBRARY}" "${SDL2_IMAGE_LIBRARIES}" "${SDL2_TTF_LIBRARIES}")
file(GLOB_RECURSE ${MODULE_NAME}_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.c" "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/*.cxx" "${CMAKE_CURRENT_SOURCE_DIR}/*.cc" "${CMAKE_CURRENT_SOURCE_DIR}/*.c++")

add_executable(${MODULE_NAME} "${${MODULE_NAME}_SOURCES}")

target_link_libraries(${MODULE_NAME} ${${MODULE_NAME}_LINKED})

install(TARGETS ${MODULE_NAME} RUNTIME DESTINATION "${PROJECT_BINARY_DIR}/bin")