# TODO ?
#include_directories("${${CMAKE_PROJECT_NAME}_SOURCE_DIR}")
#
#set(MODULE_NAME "${CMAKE_PROJECT_NAME}")
#set(${MODULE_NAME}_INCLUDES "${SDL2_INCLUDE_DIR}" "${SDL2_IMAGE_INCLUDE_DIR}" "${SDL2_TTF_INCLUDE_DIR}")
#set(${MODULE_NAME}_LINKED "${SDL2_LIBRARY}" "${SDL2_IMAGE_LIBRARIES}" "${SDL2_TTF_LIBRARIES}")
#file(GLOB_RECURSE ${MODULE_NAME}_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/**/*.c" "${CMAKE_CURRENT_SOURCE_DIR}/**/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/**/*.cxx" "${CMAKE_CURRENT_SOURCE_DIR}/**/*.cc" "${CMAKE_CURRENT_SOURCE_DIR}/**/*.c++")
#file(GLOB_RECURSE ${MODULE_NAME}_HEADERS "${${CMAKE_PROJECT_NAME}_HEADERS}/*.h" "${${CMAKE_PROJECT_NAME}_HEADERS}/*.hpp" "${${CMAKE_PROJECT_NAME}_HEADERS}/*.hxx" "${${CMAKE_PROJECT_NAME}_INTERNAL_INCLUDES_DIR}/*.hh" "${${CMAKE_PROJECT_NAME}_HEADERS}/*.h++")
#
#add_executable(${MODULE_NAME} "${${MODULE_NAME}_SOURCES}" "${${MODULE_NAME}_HEADERS}")
#
#target_link_libraries(${MODULE_NAME} ${${MODULE_NAME}_LINKED})
#
#if(WIN32)
#    add_custom_command(
#        TARGET ${MODULE_NAME} POST_BUILD
#        COMMAND ${CMAKE_COMMAND} -E copy_if_different
#        "${${CMAKE_PROJECT_NAME}_IMPLICITLY_LINKED_MODULES}"
#        $<TARGET_FILE_DIR:${MODULE_NAME}>
#    )
#endif()
#
#set_property(TARGET ${MODULE_NAME} PROPERTY FOLDER "bin")
#install(FILES ${${CMAKE_PROJECT_NAME}_HEADERS} DESTINATION "include/${CMAKE_PROJECT_NAME}")
#install(TARGETS MODULE_NAME RUNTIME DESTINATION "${PROJECT_BINARY_DIR}/bin")
#
#include("${CMAKE_MACRO_PATH}/GenerateSourceGroups.cmake")
#GenerateSourceGroups(dapps)